<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".SecondActivity">

    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text2"
        android:textSize="35dp"
        android:textStyle="bold"
        android:gravity="center"

        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radiogroupid">

        <RadioButton
            android:id="@+id/radiobutton1id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option6"
            android:textSize="35dp"
            android:textStyle="bold"
            />
        <RadioButton
            android:id="@+id/radiobutton2id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option7"
            android:textSize="35dp"
            android:textStyle="bold"
            />
        <RadioButton
            android:id="@+id/radiobutton3id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option8"
            android:textSize="35dp"
            android:textStyle="bold"
            />
        <RadioButton
            android:id="@+id/radiobutton4id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option5"
            android:textSize="35dp"
            android:textStyle="bold"
            />

    </RadioGroup>
    <Button
        android:id="@+id/submitbuttonid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button1"
        android:onClick="submitfunction"
        android:textSize="35dp"
        android:textStyle="bold"

        />

</LinearLayout>